translation-tool/inputs/source_meta/objects/Offer_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Consumer__c</fullName>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offer Partners</relationshipLabel>
        <relationshipName>Offer_Partners</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Is_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Is Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>Offer Partners</relationshipLabel>
        <relationshipName>Offer_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Offer Partner</label>
    <nameField>
        <displayFormat>OffePart-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>